# youtube-analytics-project

./: .gitignore  pyproject.toml
homework-1/: main.py
homework-2/: README.md  moscowpython.json
homework-4/: README.md
src/: channel.py  playlist.py  video.py
tests/: test.py
