[tool.poetry]
name = "denisbelenko"
version = "0.1.0"
description = ""
authors = ["denisbelenko <denisdel123@>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
env = "^0.1.0"
google-api-python-client = "^2.101.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
